# woj-sandbox

./: .clang-format  .gitignore  CMakeLists.txt  build_libseccomp.sh  err.h  launcher.c  library.c  resource.c  resource.h  sandbox.c  sandbox.h  test.c  version_script.txt
.github/workflows/: build.yml
rules/: lang.h  lang_c.c  lang_c_cpp.c  rules.c  rules.h
utils/: list.h  log.h
